--- a/08-ansible-02-playbook/playbook/inventory/prod.yml
+++ b/08-ansible-02-playbook/playbook/inventory/prod.yml
@@ -1,6 +1,9 @@
 ---
-elasticsearch:
-  hosts:
-    localhost:
-      ansible_connection: ssh
-      ansible_user: root
+  elasticsearch:
+    hosts:
+      elastic:
+        ansible_connection: docker
+  kibana:
+    hosts:
+      kibanahost:
+        ansible_connection: docker
