--- a/08-ansible-03-yandex/playbook/inventory/prod/hosts.yml
+++ b/08-ansible-03-yandex/playbook/inventory/prod/hosts.yml
@@ -2,10 +2,15 @@
 all:
   hosts:
     el-instance:
-      ansible_host: <paste_IP>
+      ansible_host: 51.250.31.49
+    k-instance:
+      ansible_host: 62.84.123.216
   vars:
     ansible_connection: ssh
-    ansible_user: <paste_user>
+    ansible_user: vagrant
 elasticsearch:
   hosts:
     el-instance:
+kibana:
+  hosts:
+    k-instance:
