--- a/08-ansible-03-yandex/playbook/site.yml
+++ b/08-ansible-03-yandex/playbook/site.yml
@@ -45,9 +45,9 @@
       yum:
         name: "/tmp/kibana-{{ elk_stack_version }}-x86_64.rpm"
         state: present
-#    - name: Configure Kibana
-#      become: true
-#      template:
-#        src: kibana.yml.j2
-#        dest: /etc/kibana/kibana.yml
-#      notify: restart Kibana
+    - name: Configure Kibana
+      become: true
+      template:
+        src: kibana.yml.j2
+        dest: /etc/kibana/kibana.yml
+      notify: restart Kibana
