--- a/08-ansible-03-yandex/playbook/inventory/prod/hosts.yml
+++ b/08-ansible-03-yandex/playbook/inventory/prod/hosts.yml
@@ -2,9 +2,11 @@
 all:
   hosts:
     el-instance:
-      ansible_host: 51.250.31.49
+      ansible_host: 51.250.30.26
     k-instance:
-      ansible_host: 62.84.123.216
+      ansible_host: 51.250.30.192
+    application-instance:
+      ansible_host: 51.250.28.8
   vars:
     ansible_connection: ssh
     ansible_user: vagrant
@@ -14,3 +16,6 @@ elasticsearch:
 kibana:
   hosts:
     k-instance:
+filebeat:
+  hosts:
+    application-instance:
