--- a/08-ansible-03-yandex/playbook/site.yml
+++ b/08-ansible-03-yandex/playbook/site.yml
@@ -22,6 +22,7 @@
     - name: Configure Elasticsearch
       become: true
       template:
+        mode: 0644
         src: elasticsearch.yml.j2
         dest: /etc/elasticsearch/elasticsearch.yml
       notify: restart Elasticsearch
@@ -48,6 +49,50 @@
     - name: Configure Kibana
       become: true
       template:
+        mode: 0644
         src: kibana.yml.j2
         dest: /etc/kibana/kibana.yml
       notify: restart Kibana
+- name: Install Filebeat
+  hosts: filebeat
+  handlers:
+    - name: restart Filebeat
+      become: true
+      service:
+        name: filebeat
+        state: restarted
+  tasks:
+    - name: "Download Filebeat's rpm"
+      get_url:
+        url: "https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-{{ elk_stack_version }}-x86_64.rpm"
+        dest: "/tmp/filebeat-{{ elk_stack_version }}-x86_64.rpm"
+      register: download_filebeat
+      until: download_filebeat is succeeded
+    - name: Install Filebeat
+      become: true
+      yum:
+        name: "/tmp/filebeat-{{ elk_stack_version }}-x86_64.rpm"
+        state: present
+      notify: restart Filebeat
+    - name: Configure Filebeat
+      become: true
+      template:
+        mode: 0644
+        src: filebeat.yml.j2
+        dest: /etc/filebeat/filebeat.yml
+      notify: restart Filebeat
+    - name: Set filebeat systemwork
+      become: true
+      command:
+        cmd: filebeat modules enable system
+        chdir: /usr/share/filebeat/bin
+      register: filebeat_modules
+      changed_when: filebeat_modules.stdout != 'Module system is already enabled'
+    - name: Load Kibana dashboard
+      become: true
+      command:
+        cmd: filebeat setup
+        chdir: /usr/share/filebeat/bin
+      register: filebeat_setup
+      changed_when: false
+      until: filebeat_setup is succeeded
